Update the Joomla stack details to allow auto deployment

--- a/joomla/stack.yml
+++ b/joomla/stack.yml
@@ -10,8 +10,15 @@ services:
       JOOMLA_DB_USER: joomla
       JOOMLA_DB_PASSWORD: examplepass
       JOOMLA_DB_NAME: joomla_db
+      JOOMLA_SITE_NAME: Joomla
+      JOOMLA_ADMIN_USER: Joomla Hero
+      JOOMLA_ADMIN_USERNAME: joomla
+      JOOMLA_ADMIN_PASSWORD: joomla@secured
+      JOOMLA_ADMIN_EMAIL: joomla@example.com
     volumes:
-      - joomla:/var/www/html
+      - joomla_data:/var/www/html
+    networks:
+      - joomla_network
 
   db:
     image: mysql:8.0
@@ -22,8 +29,13 @@ services:
       MYSQL_PASSWORD: examplepass
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
     volumes:
-      - db:/var/lib/mysql
+      - db_data:/var/lib/mysql
+    networks:
+      - joomla_network
 
 volumes:
-  joomla:
-  db:
+  joomla_data:
+  db_data:
+
+networks:
+  joomla_network:
