Convert all `stack.yml` to `compose.yaml`
Docker Swarm Mode has been in severely declining usage and maintenance for years now.  Meanwhile, Docker Compose has had quite a lot of changes (notably deprecating the `version:` field required by Swarm / forward compatibility).  As a result, it no longer makes a ton of sense for us to prefer/suggest Swarm usages.

This changes all references to be `compose.yaml` (the upstream-preferred canonical filename: https://github.com/compose-spec/compose-go/blob/9a9cc5d9c3453326bb8d506259bcfccd68af110b/cli/options.go#L384-L385) directly, leaving "swarm compatibility" as an exercise for the minority of readers who might still need/want it.

Unfortunately, this also means we need to remove all the play-with-docker links (since it only supports stack deploy via URL arguments, not compose), but my experience with that service is that it hasn't been terribly performant for a while, so I don't think this is a huge loss.

(There were also a few trailing references to the long-since-defunct Docker Machine project which have also been cleaned up.)

--- a/geonetwork/compose.yaml
+++ b/geonetwork/compose.yaml
@@ -1,11 +1,9 @@
 # GeoNetwork
 #
-# Access via "http://localhost:8080/geonetwork" (or "http://$(docker-machine ip):8080/geonetwork" if using docker-machine)
+# Access via "http://localhost:8080/geonetwork"
 #
 # Default user: admin
 # Default password: admin
-
-version: '3.8'
 
 volumes:
   geonetwork:
