--- a/mysql/compose.yaml
+++ b/mysql/compose.yaml
@@ -1,16 +1,10 @@
 # Use root/example as user/password credentials
-version: '3.1'
 
 services:
 
   db:
-    image: percona
+    image: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+    # (this is just an example, not intended to be a production configuration)
