--- a/percona/compose.yaml
+++ b/percona/compose.yaml
@@ -1,11 +1,15 @@
 # Use root/example as user/password credentials
-version: '3.1'
 
 services:
 
   db:
-    image: mysql
+    image: percona
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
-    # (this is just an example, not intended to be a production configuration)
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
