--- a/teamspeak/compose.yaml
+++ b/teamspeak/compose.yaml
@@ -15,6 +15,8 @@ services:
       TS3SERVER_DB_NAME: teamspeak
       TS3SERVER_DB_WAITUNTILREADY: 30
       TS3SERVER_LICENSE: accept
+      TS3SERVER_QUERY_PROTOCOLS: ssh,raw
+      TS3SERVER_SERVERADMIN_PASSWORD: example
   db:
     image: mariadb
     restart: always
