Remove not used mongo-express env. variables

--- a/mongo/compose.yaml
+++ b/mongo/compose.yaml
@@ -1,7 +1,4 @@
-# Use root/example as user/password credentials
-
 services:
-
   mongo:
     image: mongo
     restart: always
@@ -15,7 +12,7 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_BASICAUTH_ENABLED: true
+      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
+      ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
